# nodex

./: .gitignore  CLAUDE.md  Cargo.toml  README.ko.md  README.md
.claude/rules/: config-driven.md  json-output.md  principles.md  rust.md
.claude/skills/nodex/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  install-test.yml  lint.yml  release.yml
nodex-cli/: CLAUDE.md  Cargo.toml
nodex-cli/src/: format.rs  main.rs
nodex-cli/src/commands/: build.rs  check.rs  init.rs  lifecycle.rs  migrate.rs  mod.rs  query.rs  rename.rs  report.rs  scaffold.rs
nodex-cli/tests/: cli.rs
nodex-core/: CLAUDE.md  Cargo.toml
nodex-core/src/: config.rs  error.rs  lib.rs  lifecycle.rs  path_guard.rs  scaffold.rs
nodex-core/src/builder/: cache.rs  mod.rs  resolver.rs  scanner.rs  validator.rs
nodex-core/src/model/: confidence.rs  edge.rs  graph.rs  kind.rs  mod.rs  node.rs  status.rs
nodex-core/src/output/: json.rs  markdown.rs
nodex-core/src/parser/: body.rs  frontmatter.rs  identity.rs  mod.rs
nodex-core/src/query/: detect.rs  issues.rs  mod.rs  search.rs  traverse.rs
nodex-core/src/rules/: freshness.rs  integrity.rs  mod.rs  naming.rs  schema.rs
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
