[workspace]
members = ["nodex-core", "nodex-cli"]
resolver = "3"

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/junyeong-ai/nodex"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
