[package]
name = "nodex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal graph-based document tool — CLI"

[[bin]]
name = "nodex"
path = "src/main.rs"

[dependencies]
nodex-core = { path = "../nodex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
