[package]
name = "nodex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal graph-based document tool — CLI"

[[bin]]
name = "nodex"
path = "src/main.rs"

# cargo-binstall picks up prebuilt binaries from the GitHub Release
# assets so `cargo binstall nodex-cli` installs the same archive
# that `scripts/install.sh` downloads. Archive naming matches
# `.github/workflows/release.yml::build`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nodex-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
nodex-core = { path = "../nodex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
regex = "1.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
